회원 비밀번호, 닉네임 수정
일부 백엔드 코드 리팩토링